# mercury-forecast-verification

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ingest.yml
config/: settings.yaml
docs/: EVALUATION.md  kalshi-ws-guide-review.md  market-making-design.md  research-calibration-postmortem-2026-06-21.md  research-report.md  research-update-2026-06-10.md
docs/superpowers/plans/: 2026-06-21-rewards-mm-slow-markets.md  2026-06-22-forecast-verification-pipeline.md
docs/superpowers/specs/: 2026-06-20-polymarket-us-auth-design.md  2026-06-21-polymarket-us-market-data-design.md  2026-06-21-rewards-mm-simulator-design.md
frontend/: package-lock.json
frontend/public/: evaluations.json  evaluations.sample.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BrierChart.tsx  CalibrationChart.tsx  (+7 more)
legacy/: README.md
legacy/polybot_trading/: provider.py  us.py
legacy/tests/: test_rewards_config.py  test_rewards_db.py  test_rewards_engine.py  test_strategy.py  test_us_data.py  test_us_incentives.py
scripts/: probe_rewards_api.py
src/polybot/: __init__.py  cli.py  config.py  dashboard.py  engine.py  fees.py  maker_engine.py  rewards_engine.py
tests/: test_backfill.py  test_buckets.py  test_calibration.py  test_export.py  test_ingest.py  test_kalshi_buckets.py  test_kalshi_client.py  test_live.py  test_market_maker.py  test_market_select.py  test_paper.py  test_reward_range.py  test_rewards_engine.py  test_strategy.py  test_us_auth.py  test_us_category.py  test_verification.py  test_verify_db.py
(+25 files in other folders)
