[project]
name = "polybot"
version = "0.1.0"
description = "Maker-side weather quoting bot for Polymarket temperature markets"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "pyyaml",
    "typer",
    "rich",
    "python-dotenv",
    # "py-clob-client",  # enable in phase 1 — verify v2 vs newer py-sdk first
]

[project.scripts]
polybot = "polybot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]
