[project]
name = "polybot"
version = "0.1.0"
description = "Mercury — weather forecast vs. prediction-market verification pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "pyyaml",
    "typer",
    "rich",
    "python-dotenv",
    "cryptography",  # Ed25519 request signing for the Polymarket US API
    # "py-clob-client",  # enable in phase 1 — verify v2 vs newer py-sdk first
]

[project.scripts]
polybot = "polybot.cli:app"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]
